--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link://fonts.googleapis.com/icon?family=Material+Icons></link:>
+  <!-- Razorpay Payment Gateway Script -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 <body>
   <app-root></app-root>
